<resources>
    <string name="app_name">SiT</string>
    <string name="table">Table</string>
    <string name="home">Home</string>
    <string name="homeText01">xxx / xxx</string>
    <string name="homeText02">xxx xxx xxx xxx xxx xxx xxx</string>
    <string name="zone">Zone</string>
    <string name="map">Map</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reload">Re</string>
    <string name="title">SiT</string>
    <string name="king" />
    <string name="longtitle">Shibaura Cafeteria Seat</string>
</resources>